<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_post"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height"
    app:contentInsetLeft="0dp"
    app:contentInsetStart="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetEnd="0dp">
    <RelativeLayout android:layout_height="match_parent"
        android:layout_width="match_parent">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_search"
            android:layout_height="@dimen/toolbar_height"
            android:layout_width="@dimen/toolbar_height"
            android:gravity="center"
            android:textSize="@dimen/icon_text_size_default"
            android:text="@string/search_icon"
            android:textColor="@color/red"/>

        <TextView
            android:layout_height="@dimen/toolbar_height"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            fontPath="@string/font_title_black"
            android:textSize="@dimen/btn_home_title_textsize"
            android:text="@string/mark"
            android:textColor="@color/white"/>
        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_setting"
            android:layout_height="@dimen/toolbar_height"
            android:layout_width="@dimen/toolbar_height"
            android:gravity="center|right"
            android:layout_marginRight="60dp"
            android:layout_alignParentRight="true"
            android:textSize="25sp"
            android:text="@string/setting_icon"
            android:textColor="@color/red"/>


        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_switch"
            android:layout_height="@dimen/toolbar_height"
            android:layout_width="@dimen/toolbar_height"
            android:gravity="center"
            android:tag="list"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/icon_text_size_default"
            android:text="@string/map_icon"
            android:textColor="@color/red"/>

    </RelativeLayout>
</android.support.v7.widget.Toolbar>